# fhir

./: .env.example  .gitignore  README.md  docker-compose.yml  init.sql  requirements.txt
app/: config.py  seed_data.py
app/api/routes/: auth.py  fhir.py
app/application/: auth_service.py
app/domain/: repositories.py
app/infrastructure/database/: models.py
backend/: Dockerfile  Makefile  pyproject.toml
backend/scripts/: load_seed.py
backend/src/config/: settings.py
backend/src/domain/auth/: controller.py  entities.py  policies.py  repositories.py  view.py
backend/src/domain/bundle/: services.py
backend/src/domain/fhir/encounter/: controller.py  entities.py  repositories.py  specs.py  view.py
backend/src/domain/fhir/observation/: controller.py  entities.py  repositories.py  specs.py  view.py
backend/src/domain/fhir/patient/: controller.py  entities.py  repositories.py  specs.py  view.py
backend/src/infrastructure/db/: session.py
backend/src/infrastructure/db/models/: auth.py
backend/src/infrastructure/db/models/fhir/: encounter.py  observation.py  patient.py
backend/src/infrastructure/db/repositories/: auth_repo_sqlalchemy.py
backend/src/infrastructure/db/repositories/fhir/: encounter_repo_sqlalchemy.py  observation_repo_sqlalchemy.py  patient_repo_sqlalchemy.py
backend/src/interfaces/api/: deps.py  main.py  routes.py
backend/src/interfaces/api/v1/: routes.py
client/: postman_collection.json
